# Mobilesendgeraet

./: .breakpoints  README.md  main.py  obj.py  pyproject.toml  telefonbuch.json
Mobi/: Bedienungsanleitung.md  Das Smartphone.odt  Strucktogramm.strk  binder.py  main.py  obj.py  sex.txt  telefonbuch.json
src/: README.md  main.py  obj.py  telefonbuch.json
src/Mobi/: Bedienungsanleitung.md  Bedienungsanleitung_final.docx  Car.vpd  Strucktogramm.strk
