[tool.poetry]
name = "Mobiltelefon"
version = "1.0.0"
description = "Offizielles Projekt für eine Simulation eines Mobiltelefons"
authors = ["Einar", "Jony", "Maxi"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
